--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,16 @@
 }
 
 body{
+	display: flex;
+	width: 100vw;
+	height: 100%;
+	flex-direction: column;
+	justify-content: center;
+	align-items: space-between;
 	background-color: var(--background);
 	padding: 0px 10px;
 	color: var(--text-color);
+	overflow: hidden;
 }
 div#titlebar{
 	background-color: var(--background);
@@ -68,5 +75,12 @@ li#maximize{
 	background-color: #3fb50d;
 	-webkit-app-region: no-drag;
 	cursor: pointer;
+}
+
+video{
+	width: 100vw;
+	height: 100vh;
+	object-fit: fill;
+	background-color: var(--background);
 }
 
