--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body{
 	justify-content: center;
 	align-items: space-between;
 	background-color: var(--background);
-	padding: 0px 10px;
 	color: var(--text-color);
 	overflow: hidden;
 }
@@ -26,6 +25,7 @@ div#titlebar{
 	background-color: var(--background);
 	display: flex;
 	height: 30px;
+	padding: 0px 10px;
 	align-items: center;
 	justify-content: space-between;
 	-webkit-user-select: none;
@@ -37,9 +37,13 @@ div#titlebar span{
 	font-family: sans-serif;
 	letter-spacing: 0.5px;
 	text-align: center;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 	background-color: var(--background);
 	width: 100%;
 }
+
 ul#buttons{
 	display: flex;
 	gap: 8px;
@@ -73,6 +77,22 @@ li#maximize{
 	height: 12px;
 	border-radius: 50%;
 	background-color: #3fb50d;
+	-webkit-app-region: no-drag;
+	cursor: pointer;
+}
+#search{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	-webkit-app-region: no-drag;
+	-webkit-user-select: none;	
+	cursor: pointer;
+}
+#search svg{
+	-webkit-app-region: no-drag;
+}
+svg path{
+	fill: var(--text-color);
 	-webkit-app-region: no-drag;
 	cursor: pointer;
 }
